--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>React and Webpack4</title>
 </head>
 <body>
   <section id="index"></section>
+  <script src='https://cloud.tinymce.com/stable/tinymce.min.js'></script>
 </body>
 </html>
